# cowsay-mcp

./: README.md  justfile  pyproject.toml
.github/workflows/: run-linters.yml  run-tests.yml
demo/: __init__.py  llm.py  main.py  prompting.py  prompts.py  tool_flow.py
src/cowsay_mcp/: __init__.py  main.py  server.py
src/csay/: __init__.py  main.py  server.py
tests/intg/: test_demo_flow.py
tests/unit/: test_demo_main.py  test_demo_validation.py  test_prompting.py  test_server.py  test_server_main.py
