[project]
name = "cowsay-mcp"
version = "0.1.0"
description = "FastMCP cowsay tool server"
readme = "README.md"
authors = [{ name = "akitorahayashi" }]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "cowsay>=5.0",
]

[project.optional-dependencies]
demo = [
    "mlx-lm>=0.28.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0,<2.0.0",
    "black>=25.1.0",
    "ruff>=0.12.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cowsay_mcp", "demo"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-v -s --tb=short"

[tool.black]
target-version = ['py312']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.uv-cache
    | \.venv
    | venv
    | env
    | build
    | dist
    | .*/(bin|lib|share|etc)
    | .*/pyvenv\.cfg
)/
'''

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # E501 (line too long) is ignored
